<resources>
    <string name="app_name">99 Hub</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="app_info">ALL ABOUT FOR ONLINE GAME<br>ZONE © 2021 99HUB.IN</br></string>
    <string name="in_play">In Play</string>
    <string name="profile">Profile</string>
    <string name="upcoming_game">Upcoming Game</string>
    <string name="complete_games">Complete Games</string>
    <string name="my_ledger">My Ledger</string>
    <string name="change_password">Change Password</string>
    <string name="old_games">Old Games List</string>
    <string name="old_ledger">Old My Ledger</string>
    <string name="logout">Logout</string>
    <string name="back_to_main_menu">Back To Main Menu</string>
    <string name="old_pass">Old Password</string>
    <string name="new_pass">New Password</string>
    <string name="con_pass">Confirm Password</string>
    <string name="rate_info">Rate Information</string>
    <string name="rate_diff">Rate Difference :</string>
    <string name="upate">Update</string>
    <string name="client_code">Client Code :</string>
    <string name="personel_info">Personal Information</string>
    <string name="client_name">Client Name:</string>
    <string name="contact_no">Contact No:</string>
    <string name="d_o_j">Date Of Joining:</string>
    <string name="address">Address:</string>
    <string name="conpany_info">Company Information</string>
    <string name="help_no">Help Line No:</string>
    <string name="help_line">+91-1234567890</string>
    <string name="term_con">Terms And Conditions</string>
    <string name="welcome_to">Welcome To<br>99HUB</br></string>
    <string name="thanks_visiting">Thanks For Visiting Our Site</string>
    <string name="cnt">Continue</string>
    <string name="back_to_in_play">Back To In Play Games</string>
    <string name="no_ledger">Nothing In Your Ledger !</string>
    <string name="back_to_comp_game">Back To Complete Game</string>
    <string name="session_bet">Session Bet(s)</string>
    <string name="match_bet">Match Bet(s)</string>

</resources>