<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".fragments.ProfileFragment">

    <!-- TODO: Update blank fragment layout -->
    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@drawable/back_main_menu_style"
        android:text="@string/back_to_main_menu"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:backgroundTint="@null" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/grey"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/rate_info"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:backgroundTint="@null" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/profile_info_bg_style"
        android:gravity="center"
        android:weightSum="3">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:text="@string/rate_diff"
                android:textColor="@color/black" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:background="@color/grey_light" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="5dp">

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                app:ms_background_color="@color/grey_light"
                app:ms_hint_color="@color/grey_dark"
                app:ms_text_color="@color/grey_dark" />

            <Button
                android:id="@+id/btn_update"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="end"
                android:background="@drawable/btn_update_style"
                android:gravity="end"
                android:text="@string/upate"
                app:backgroundTint="@null">

            </Button>

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/grey"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/personel_info"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:backgroundTint="@null" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/profile_info_bg_style"
            android:paddingLeft="5dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/client_code"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_cid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/profile_info_bg_style"
            android:paddingLeft="5dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/profile_info_bg_style"
            android:paddingLeft="5dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/client_name"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_cname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/profile_info_bg_style"
            android:paddingLeft="5dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/profile_info_bg_style"
            android:paddingLeft="5dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/contact_no"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_contact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/profile_info_bg_style"
            android:paddingLeft="5dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/profile_info_bg_style"
            android:paddingLeft="5dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/d_o_j"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_doj"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/profile_info_bg_style"
            android:paddingLeft="5dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/profile_info_bg_style"
            android:paddingLeft="5dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/address"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/profile_info_bg_style"
            android:paddingLeft="5dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="India"
            android:textColor="@color/black" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@color/grey"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/conpany_info"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:backgroundTint="@null" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/profile_info_bg_style"
            android:paddingLeft="5dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/help_no"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_hline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/profile_info_bg_style"
            android:paddingLeft="5dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/help_line"
            android:textColor="@color/black" />
    </LinearLayout>


</LinearLayout>