<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/off_white"
    android:orientation="vertical"
    android:padding="2dp"
    tools:context=".fragments.CGDetailsFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/back_main_menu_style"
                android:text="@string/back_to_comp_game"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <TextView
                android:visibility="gone"
                android:id="@+id/tv_match_bets_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/grey_dark"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/match_bet"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <TableLayout
                android:id="@+id/table_bets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*" />

            <TextView
                android:id="@+id/tv_match_bets_wl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/profile_info_bg_style"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/session_bet"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:visibility="gone"
                app:backgroundTint="@null" />

            <TextView
                android:visibility="gone"
                android:id="@+id/tv_session_bets_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/grey_dark"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/session_bet"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <TableLayout
                android:id="@+id/table_session"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*" />
            <TextView
                android:id="@+id/tv_match_session_wl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/profile_info_bg_style"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/session_bet"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:visibility="gone"
                app:backgroundTint="@null" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>